# jelper

./: .gitignore  Cargo.toml  Makefile  README.md  installer.iss  jelper.py
.github/workflows/: release.yml
scripts/: build_installer_windows.ps1  build_macos.sh  build_windows.ps1  inject_version.py  release.py  update_homebrew.sh
src/: config.rs  display.rs  export.rs  jira.rs  main.rs  render.rs  render_tasks.rs  time.rs
