[package]
name = "jelper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jelper"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
console = "0.16"
dialoguer = "0.12"
dirs = "6"
indicatif = "0.18"
keyring = "3"
open = "5"
reqwest = { version = "0.13", features = ["json"] }
rust_xlsxwriter = "0.94"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
